[package]
name = "EDDI-Game-Server-Common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
async-trait = "*"
env_logger = { version = "*", features = [] }
dotenv = "*"